--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://kit.fontawesome.com/bdb7cb08a4.js" crossorigin="anonymous"></script>
+    <!--<link rel="stylesheet" href="normalize/normalize.css">-->
     <link rel="stylesheet" href="style/style.css">
 
 </head>
